FIX: fix parallax scroll
* images weren't parallax scrolling when viewport with was too high because images were set to object-fit: contain, making it so the the image was lock in position
* changed images to background-images instead of img tags so I could adjust background-position on parallax scroll
* images would scroll beyond the edge, so I made the images bigger and adjusted the scrolling speed to it's linked to target element's height instead

--- a/src/app/project-details/project-details.component.css
+++ b/src/app/project-details/project-details.component.css
@@ -3,16 +3,18 @@
    No media query since this is the default in Bootstrap 
 */
 .gutter-image-top {
-    object-position: center top;
+    background-position: center top;
 }
 
 .gutter-image-bottom {
-    object-position: center center;
+    background-position: center center;
 }
 
 .gutter-image-top,
 .gutter-image-bottom {
-    object-fit: cover;
+    background-image: url(../../assets/img/mountains-2.png);
+    background-repeat: no-repeat;
+    background-size: 100% auto;
     height: 8vh;
     width: 100vw;
     max-width: 100vw;
@@ -23,7 +25,9 @@
 
 .gutter-image-left,
 .gutter-image-right {
-    object-fit: none;
+    background-image: url(../../assets/img/mountains-2.png);
+    background-repeat: no-repeat;
+    background-size: auto 200vh;
     position: absolute;
     top: 0;
     height: 100%;
@@ -32,12 +36,12 @@
 
 .gutter-image-left {
     left: 0;
-    object-position: left top;
+    background-position: left top;
 }
 
 .gutter-image-right {
     right: 0;
-    object-position: right top;
+    background-position: right top;
 }
 
 /* Small devices (landscape phones, 576px and up) */
